--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -14,6 +14,24 @@ layout: default
 The Linux Community and a Career in Open Source  
 
 ## 1.1
+[Linux Evolution and Popular Operating Systems](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html) 
+Weight: 2
+
+## 1.2
+[Major Open Source Applications](https://bullintheserver.github.io/linuxstudysessions/topic1/1_2.html)  
+Weight: 2  
+
+## 1.3
+[Open Source Software and Licensing](https://bullintheserver.github.io/linuxstudysessions/topic1/1_3.html)
+Weight: 1  
+
+## 1.4
+[ICT Skills and Working in Linux](https://bullintheserver.github.io/linuxstudysessions/topic1/1_4.html)  
+Weight: 2  
+
+---
+
+## 1.1
 Linux Evolution and Popular Operating Systems  
 Weight: 2
 
@@ -130,370 +148,6 @@ Weight: 2
     - Windows Servers
 
 
-## 1.2
-Major Open Source Applications  
-Weight: 2  
-
-### Applications & Software
-
-Install and removal of packages via terminal:  
- - Ordinary users must prepend with `sudo`
-    - Followed by entering user password
-    - This gives certain `root` user permissions without being in `root` account 
-
-#### Package manager
-- Package repo with vast collection of apps available to install
-- Debian, Ubuntu, Mint install | uninstall commands
-    - `dpkg` (DEB Packages)
-    - `apt-get`
-    - `apt`
-    - Searching repos
-        - `apt-cache search package_name`
-            - `apt-cache` used to search for pkgs and list info about available pkgs
-    - `apt search package_name`
-- Full download and install string example
-    - `sudo apt-get install package_name`  
-    - `sudo apt install package_name`  
-
-- Red Hat, Fedora, CentOS install | uninstall commands
-    - `rpm` (RPM packages)
-    - `yum`
-    - `dnf`
-    - Searching repos
-        - `yum search package_name`
-        - `dnf search package_name`
-- Full download and install string example
-    - `sudo yum install package_name`
-    - `sudo dnf install package_name`
-- Remove vs. purge
-    - Configuration files are not removed when updating software for seamless login
-    - apt-remove
-        - Doesn't remove configuration files
-    - apt-purge
-        - Removes configuration files
-#### Office applications
-- Most popular  
-    - Apache OpenOffice
-        - Apache License 2.0
-            - Cannot incorporate improvements made by LibreOffice
-    - LibreOffice
-        - LGPLv3 License
-            - Can incorporate improvements made by Apache OpenOffice
-            - Reason most distros adopt LibreOffice over OpenOffice
-- Both compatible with Microsoft Office
-- *Open Document Format* aka *ODF*
-    - Preferred
-    - Fully open and ISO standardized file format
-    - Ensures docs are cross platform, cross application
-
-#### Web browsers
-- Main web browsers in Linux enviro
-    - Google Chrome
-        - Maintained by Google
-        - Based on open source browser *Chromium*
-    - Mozilla Firefox
-        - Maintained by Mozilla
-            - Non-profit org
-            - Foundation deeply involved with open standards development underlying the modern web
-            - Develops other apps 
-                - E-mail client *Thunderbird* 
-                    - Offers extra features and integrates with other desktop apps
-        - Origins linked to Netscape
-            - First popular web browser to adopt open source model
-
-#### Multimedia
-- Popular FLOSS applications
-    - Blender
-        - 3d animations and objects rendering
-    - GIMP
-        - Full-featured image editor
-        - Comparable with Adobe Photoshop
-    - Inkscape
-        - Vector graphics editor
-        - Comparable to Corel Draw or Adobe Illustrator08_05_2024_10_53_00
-        - Default open standard format: SVG
-    - Audacity
-        - Audio editor
-        - Limited compared to GarageBand or ProTools
-    - ImageMagick
-        - Command line tool
-            - Converts / edits image file types
-            - Can create PDFs from image files
-    - Playback applications
-        - Video playback
-            - VLC
-            - smplayer
-        - Audio playback
-            - Audacious
-            - Banshee
-            - Amarok
-                - Can also manage local sound files
-
-#### Server programs
-- Web page servers
-    - Web browser: client
-        - Common script: JavaScript
-    - Remote computer: server
-        - Common script: PHP
-        - Can request info from other servers
-            - Such as a database server
-    - most deploy open source server programs
-    - Known as an *HTTP server*
-        - Collects and sends requested data back to browser
-        - Arranges content defined by HTML document
-    - Most popular
-        - Apache
-        - Nginx
-        - lighttpd
-- Database servers
-    - Database
-        - Organized set of information
-    - Stores contents in formatted fashion
-    - Most common type
-        - Relational database
-            - Data organized in predefined tables
-            - Most popular open source
-                - MariaDB
-                    - Originated from MySQL
-                - PostgreSQL
-
-#### Data sharing
-- *Network File System* aka *NFS*
-    - NSF protocol
-    - Standard way to share file systems in Unix/Linux-only networks
-    - Shares directories for r/w (read/write) purposes
-    - Can share entire directory tree to boot from
-        - Used by *thin clients* in large networks 
-            - Avoids individual OS maintenance
-- *Samba*
-    - Compatible with all major OSs
-        - As of version 4
-    - Can share files and printers
-    - Used in mixed OS network settings
-- *Domain controller*
-    - Central server
-    - Authorizes logins on workstations 
-    - Manages access to local and remote resources 
-    - Domain controller service provided by Microsoft's *Active Directory*
-    - Workstations
-        - Can associate with DC using
-            - Samba
-            - Auth subsystem *SSSD* 
-- Cloud computing
-    - ownCloud
-        - More focused on
-            - File sharing
-            - Third-party integration
-        - Supports plugins
-    - Nextcloud
-        - *Fork* (aka spin-off) of ownCloud
-        - All features of ownCloud
-            - Plus private audio/video conferencing
-        - Supports plugins
-    - Both
-        - Offer paid version
-            - Extra features
-            - Extended support
-        - Can be installed on private server
-        - Free of charge
-        - Must be installed on previously configured web server
-            - Such as Apache
-            - Because services depend on HTTP, and are written in PHP
-        - Make sure to enable HTTPS
-            - Encrypts all connections to your cloud
-
-#### Network administration
-- Network configuration
-    - Set of programs running on router
-        - Responsible for setting up and checking network availability
-    - *Dynamic Host Configuration Protocol* (*DHCP*)
-        - Responsible for assigning IP addresses to hosts
-        - ISP's DHCP server provides external network address
-        - Local DHCP server provides internal network address
-        - Most routers come with pre-configured DHCP server
-    - *Domain Name System* (*DNS*)
-        - Translates IP addresses into human readable URLs, aka *domains*
-            - *Uniform Resource Locators*
-        - IP address of DNS server is provided by ISP's DHCP server
-    - Both DHCP and DNS settings can be modified via web interface
-    - Google DNS & OpenDNS
-        - Sometimes faster
-        - Provides extra features
-
-#### Programming languages
-- Programs
-    - Single file or complex system of files
-        - OS treats these files as instruction sequence
-        - Performed by processor and other devices
-    - Begin as text file known as *source code* 
-        - Uses various human readable languages that describe program actions
-
-- Compiled languages
-    - Source code converted to binary file
-        - Computer executes binary file
-    - *Compiler* program responsible for conversion
-        - Compiled binary specific to kind of processor
-    - Not computer readable and executable 
-            - Processor can not directly execute these human readable languages
-   
-- Interpreted languages
-    - Program does not need to be compiled
-    - *Interpreter* reads source code and executes every time program is run
-    - Pro
-        - Development is easier and faster
-    - Con
-        - Programs tend to be slower than compiled programs 
-    - Aka *scripting languages*
-
-- JavaScript
-    - Mostly used in web pages
-    - Used to create complex apps for web, servers, and mobile
-- C
-    - Compiled language
-    - Closely related with OSs
-        - Particularly Unix
-    - Used to write any kind of program to almost any device
-    - Advantages
-        - Flexibility
-        - Speed
-        - Can be compiled to run in different platforms and OSs with little or no modification
-        - After compiling program will only run on targeted system
-- Java
-    - Compiled language
-        - Converted to *bytecode*
-        - Executed in *Java Virtual Machine* software environment
-    - Main aspects
-        - Portability
-        - Same program can be executed in different OSs
-        - Not related to JavaScript
-- Perl
-    - Most used to process text content
-    - Strong regular expressions emphasis
-        - Makes Perl suited for text filtering and parsing
-- Shell
-    - Not just a programming language
-        - Interactive interface to run other programs
-    - Shell programs
-        - aka *shell scripts*
-        - Can automate complex or repetitive tasks on command line enviro 
-- Python
-    - Good way to start learning programming
-    - Easy to use approach
-- PHP
-    - Most used as server side scripting language 
-        - Used for generating content for web
-    - Used to generate dynamic content from various sources such as databases
-    - LAMP
-        - Popular server solution for running web servers
-        - Made up of
-            - Linux OS
-            - Apache HTTP server
-            - MySQL or Maria DB database
-            - PHP programming
-        - All of the programming languages described can also be used to implement these applications
-
-## 1.3
-Open Source Software and Licensing
-Weight: 1  
-
-### The four essential freedoms
-- Freedom 0
-    - Freedom to run the program as you wish, for any purpose.
-- Freedom 1
-    - Freedom to study how the program works, and change it so it does your computing as you wish.
-    - Access to source code is a precondition.
-- Freedom 2
-    - Freedom to redistribute copies so you can help others.
-- Freedom 3
-    - Freedom to distribute copies of your modified versions to others.
-    - Gives whole community chance to benefit from changes.
-    - Access to source code is a precondition.
-
-### FOSS & FLOSS
-- FOSS
-    - Free & open source software
-- FLOSS
-    - Free/libre & open source software
-- Proprietary
-    - For profit, controlled, limited 
-
-### Copyleft
-- *Free Software Foundation* created licenses
-    - *GNU General Public License* (GPL)
-        - One of the most important license for free software
-        - Used for the Linux kernel
-    - *GNU Lesser General Public License* (LGPL)
-        - Combination free software with modifications made to code where source code for mods do not have to be released to public
-    - *GNU Affero General Public License* (AGPL)
-        - Covers selling access to hosted software
-    - *GNU Free documentation License* (FDL)
-        - Extends freedom principles to software documentation
-    - Also makes recommendations for or against:
-        - Third party license
-        - Affiliated projects
-
-- *Copyleft*
-    - FSF term meant to contrast principle of restrictive copyright
-    - Transfers the liberal principles of a software license as unrestrictedly as possible to future variants of the software in order to prevent subsequent restrictions. 
-    - Critics call copyleft "viral" since it's transmitted to subsequent versions
-    - LGPL is a concession to be able to connect free software with "non-free" components
-    - *Dual licensing*
-        - Licensing under multiple licenses
-        - e.g. a free license and a proprietary license
-
-### Open source & licenses 
-- *Open Source Initiative* (OSI)
-    - Has standardized procedure for checking OS software license compliance
-    - Has more than 80 recognized OS licenses on the OSI website
-    - *Berkeley Software Distribution*
-        - Contradictory to copyleft
-        - "OSI approved," especially the BSD licenses group
-        - Variant of Unix OS originally developed at UC Berkeley
-        - Gave rise to
-            - NetBSD
-            - FreeBSD
-            - OpenBSD
-        - Underlying licenses "permissive" 
-            - Do not have aim of establishing terms of use of modified variants
-            - Maximum freedom should help software decide how to edit
-            - Developers have control over open or closed source
-        - *2-Clause BSD License*, aka *Simplified BSD License*, or *FreeBSD License*
-            - Consists of a standardized liability clause and the following:
-                - Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
-                   - 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 
-                   - 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
-
-### Creative commons 
-- CC BY (Attribution)
-    - Anyone can edit and distribute the work, must name original author
-- CC BY -SA (Attribution-ShareAlike)
-    - Like CC BY, except modified work may only be distributed under the same license
-- CC BY - ND (Attribution-NoDerivatives)
-    - Like CC BY, except only reproduced unmodified
-- CC BY -NC (Attribution-NonCommercial)
-    - May be edited and distributed by naming the author, but only under non-commercial conditions
-- CC BY -NC -SA (Attribution-NonCommercial-ShareAlike)
-    - BY -NC but shared under same conditions
-- CC BY -NC -ND (Attribution-NonCommercial-NoDerivatives)
-    - Attribution, non-commercial conditions, and unchanged
-
-### Business models in open source
-- *Crowdfunding* 
-    - Collection of money donations 
-    - Donors receive pre-defined bonus in event of success
-- *Dual licensing*
-    - Free software is offered in parallel under more restrictive or proprietary license
-    - Guarantees more extensive features 
-    - Business editions
-- *Professional services*
-    - Consulting, maintenance, helpdesk, hosting, support
-- *Peripheral monetization*
-    - Merchandising, certificates, etc.
-    - Proprietary extensions development
-- *Software as a Service (SaaS)*
-    - Customer pays for use according to adjustable parameters
-
-## 1.4
 ICT Skills and Working in Linux  
 Weight: 2  
 
