--- a/topic1/1_4.md
+++ b/topic1/1_4.md
@@ -13,6 +13,24 @@ layout: default
 # Topic 1
 The Linux Community and a Career in Open Source  
 
+## 1.1
+[Linux Evolution and Popular Operating Systems](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html) 
+Weight: 2
+
+## 1.2
+[Major Open Source Applications](https://bullintheserver.github.io/linuxstudysessions/topic1/1_2.html)  
+Weight: 2  
+
+## 1.3
+[Open Source Software and Licensing](https://bullintheserver.github.io/linuxstudysessions/topic1/1_3.html)
+Weight: 1  
+
+## 1.4
+[ICT Skills and Working in Linux](https://bullintheserver.github.io/linuxstudysessions/topic1/1_4.html)  
+Weight: 2  
+
+---
+
 ## 1.4
 ICT Skills and Working in Linux  
 Weight: 2  
