--- a/topic2/2_2.md
+++ b/topic2/2_2.md
@@ -4,14 +4,28 @@ layout: default
 ---
 
 **LINKS**
-- [**TOPIC 1:** The Linux Community and a Career in Open Source](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html)
-- [**TOPIC 2:** Finding Your Way on a Linux System](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)
-- [**TOPIC 3:** The Power of the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic3/3_1.html)
-- [**TOPIC 4:** The Linux Operating System](https://bullintheserver.github.io/linuxstudysessions/topic4/4_1.html)
-- [**TOPIC 5:** Security and File Permissions](https://bullintheserver.github.io/linuxstudysessions/topic5/5_1.html)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
 
-# Topic 2
+## Topic 2  
 Finding Your Way on a Linux System
+
+### 2.1
+[Command Line Basics](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)  
+Weight: 2
+
+### 2.2
+[Getting Help on the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic2/2_2.html)  
+Weight: 2
+
+### 2.3
+[Using Directories and Listing Files](https://bullintheserver.github.io/linuxstudysessions/topic2/2_3.html)  
+Weight: 2
+
+### 2.4
+[Creating, Moving, and Deleting Files](https://bullintheserver.github.io/linuxstudysessions/topic2/2_4.html)  
+Weight: 2
+
+--- 
 
 ## 2.2
 Using the Command Line to Get Help  
