--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -4,290 +4,24 @@ layout: default
 ---
 
 **LINKS**
-- [**TOPIC 1:** The Linux Community and a Career in Open Source](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html)
-- [**TOPIC 2:** Finding Your Way on a Linux System](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)
-- [**TOPIC 3:** The Power of the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic3/3_1.html)
-- [**TOPIC 4:** The Linux Operating System](https://bullintheserver.github.io/linuxstudysessions/topic4/4_1.html)
-- [**TOPIC 5:** Security and File Permissions](https://bullintheserver.github.io/linuxstudysessions/topic5/5_1.html)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
 
-# Topic 3
+## Topic 3  
 The Power of the Command Line
 
-## 3.1
-Archiving Files on the Command Line  
-Weight: 2 
+### 3.1  
+[Archiving Files on the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic3/3_1.html)  
+Weight: 2
 
-### Introduction
-- Compression
-    - Reduces space consumption
-    - Reduces data transfer size on networks
-- Lossless
-    - Can be uncompressed back to original
-- Lossy
-    - Cannot be recovered
-    - Often used when:
-        - Quality loss is imperceptible for humans
-        - Space is more valuable than quality
-        - Quality is irrelevant to context
-- Linux compression tools
-    - Lossless
-        - `bzip2` (`.bz`)
-        - `gzip` (`.gz`, `.z`, `.tgz` for `tar`)
-        - `xz` (`.xz`)
-    - Each tool uses a different algorithm
-        - Won't work interchangeably
-    - Incl. special versions of common tools
-        - `cat`, `grep`, `diff`, `less`, `more`
-        - `gzip` tools prefixed with `z`
-            - e.g. `zcat`, `zgrep`, etc.
-        - `bzip2` prefixed with `bz`
-        - `xz` prefixed with `xz`
-- Archiving tools
-    - Used to bundle files/dirs. into single file
-    - Common uses:
-        - Backups
-        - Bundled source code
-        - Data retention 
-    - Compression capabilities of archivers range from:
-        - Optional
-        - Default
-        - Not included
+### 3.2  
+[Searching and Extracting Data from Files](https://bullintheserver.github.io/linuxstudysessions/topic3/3_2.html)  
+Weight: 3
 
-### tar
-- `tar`
-    - Stands for *tape archive*
-    - Most common Linux archiver
-    - On it's own manages but does not compress
-    - Files known as *tar balls*
-- `-c` option
-    - Creates new archive file
-- `-f` option
-    - Specifies the next input is name of file
-    - Can include path
-    - Without path, will place in current location
-- Final arguments
-    - After location and name
-    - Paths to files/dirs to be included
-- `-t` option
-    - Lists contents of an archive
-- `-v`
-    - Verbose mode
-    - Displays operations and names of files
-- `-x`
-    - Extracts files from archive
-    - Can be used to extract single file from within archive
-        - Use path and filename
-- `-u`
-    - Updater, appends does not overwrite 
-    - Add files to existing uncompressed `tar` archive
-    - Will cause error if attempted with compressed `tar`
-- Compression calls as options
-    - `bzip2`
-        - `-j`
-        - e.g. `tar -cjf file.tar.bz2 bigfile1`
-    - `xz`
-        - `-J` 
-        - e.g. `tar -cJf file.tar.xz bigfile1`
-    - `gzip`
-        - `-z`
-        - e.g. `tar -czf file.tar.gz bigfile1`
-    - Remember to always add correct file extensions
+### 3.3  
+[Turning Commands into a Script](https://bullintheserver.github.io/linuxstudysessions/topic3/3_3.html)  
+Weight: 4
 
-### zip
-- Windows compatibility 
-    - `tar` applications uncommon in Windows
-    - Use ZIP files for Windows interaction 
-- ZIP files
-    - Is an archive file
-    - Similar to compressed `tar` file
-    - `zip` & `unzip` will work on Linux CLI 
-    - `-r` recursion needed to include directory contents
-    - `-f` freshen
-    - `#` 
-        - Regulates speed of compression
-        - `-1` fastest (least compression)
-        - `-9` slowest (most compressed)
-        - `-6` default level 
-
-## 3.2
-Searching and Extracting Data from Files  
-Weight: 3 
-
-### Lesson 1
-
-#### I/O Redirection 
-- *stdin*
-    - Channel 0
-    - Standard input
-    - Considered to be keyboard
-- *stdout*
-    - Channel 1
-    - Standard output
-    - Considered screen
-- *stderr*
-    - Channel 2
-    - Default redirects error outputs
-        - For command
-        - For programs 
-        - Input/output can be redirected 
-- Redirection of command components 
-    - Transmit information to command
-    - Redirect output to file
-    - Redirect from or to command via text file
-- `>`
-    - Redirect output to file
-    - Follow will name of file
-    - Will create non-existent file
-    - Will overwrite existing file
-- `>>`
-    - Appends and returns carriage to next line
-    - Will not overwrite file
-    - Can create new file
-    - Follow with desired file name
-- `2>`
-    - Redirects just error messages
-    - Follow with desired file name
-    - useful for creating error logs
-- `2>>`
-    - Append error message
-    - Same rules as `>>`
-- `/dev/null`
-    - Use with caution
-    - Is a *bit bucket*
-    - Unwanted output can be piped here
-    - Data sent to `/dev/null` is discarded 
-    - Provides no data when read from
-- `<` 
-    - Input data to a command from file
-    - `cat < filename.txt`
-    - Used with commands that don't accept file arguments
-        - e.g. `tr -d "s" < filename.txt`
-            - Deletes the letter "s" out of filename.txt 
-- `<<`
-    - *Here document*
-    - Represents block of code/text which can be redirected to the command or interactive program
-    - Different types of scripting languages can take input directly from CLI without using text files
-    - Will present you with lines you can return in without submission
-    - Submit by entering name given after `<<` followed by return carriage 
-    - Can be combined with other redirection
-        - e.g. `cat << inthehat > inthehat.txt`
-- `&>`, `&>>`
-    - Combines channel 1 and channel 2 outputs 
-    - Use same rules as `>` and `>>` but with the channels combined
-
-#### Command Line Pipes 
-- `|`
-    - *Pipes*
-    - Link commands directly
-    - Avoids saving output then running separate command
-    - First command output becomes second command input
-    - Can be used in succession to continue filtering 
-- `head`
-    - Displays first 10 lines of text by default
-    - `-n` specifies number of lines if desired
-- `tail`
-    - Displays last 10 lines of text by default
-    - `-n` specifies number of lines if desired
-- `more`
-    - Allows for paging through files
-- `less`
-    - Allows for paging through files 
-    - Can scroll forward and backward
-    - More robust and faster than `more`
-    - *Less is more*
-        - Used to remember `less` has more functionality 
-- `wc`
-    - Counts lines, words, bytes
-    - `-w` counts only words
-    - `-l` counts only lines
-    - `-c` counts only bytes
-- `cut`
-    - Prints selected parts of lines from FILE to standard output
-    - `-f` specifies the field 
-    - `-d` specifies how fields are to be defined
-        - Delimiter
-        - e.g. `/` will define fields as between each `/`S
-- `tr`
-    - Translates or deletes characters
-    - `-d` specifies deletion
-    - `-s` *squeeze repeats* 
-        - Replace sequence of repeated characters with single occurrence 
-- `sort`
-    - Write sorted concatenation of FILE to standard output
-    - `-f` ignores case
-    - `-r` reverses output 
-
-### Lesson 2
-
-#### grep
-- `grep`
-    - *global regular expression print*
-    - Searches within file for specified pattern
-    - Outputs line containing pattern and highlights in red
-- `-i`
-    - Search case-insensitive 
-- `-r` 
-    - Recursive search through subdirectories 
-- `-c` 
-    - Counts number of matches 
-- `-v` 
-    - Inverts search
-    - Prints lines that do not match
-- `-E`
-    - Turns on extended regular expressions
-    - Needed by advanced meta-characters
-        - e.g. `|`, `+`, `?`
-    - Can also use `egrep`
-        - Depreciated in some systems
-
-#### Regular Expressions
-- Extracts data by constructing patterns
-- Commonly used within scripts or when programming
-    - Often with high level languages: Perl, Python
-- !!! Every character counts !!!
-    - Pattern is written to match specific string
-- Most patterns use normal ASCII symbols
-    - Letters
-    - Digits
-    - Punctuation
-    - Symbols
-- Can also use Unicode
-
-| Meta-Characters | Function |
-|-----------------|----------|
-| `.` | Match any single character (except newline) |
-| `[abcABC]` | Match any one character within the brackets |
-| `[^abcABC]` | Match any one character except the ones in the brackets |
-| `[a-z]` | Match any character in the range |
-| `[^a-z]` | Match any character except the ones in the range |
-| `either\|or` | Find either of the listed strings |
-| `^` | Start of a line |
-| `$` | End of a line |
-| `*` | Zero or more of the preceding pattern |
-| `+` | One or more of the preceding pattern |
-| `?` | Zero or one of the preceding pattern |
-
-```
-$ grep "^a" text.txt
-ant
-anvil
-arachnid 
-
-$ grep "a$" text.txt
-santa
-flora
-fauna
-
-$ grep -E "ab.+" text.txt
-abcde
-about
-cab ride
-```
-
-- `sed`
-    - Stream editor
-    - Filters and transforms text
-    - Can find and replace characters and sets of characters
+---
 
 ## 3.3
 Turning Commands into a Script  
@@ -725,4 +459,3 @@ done
 exit 0
 ```
 ---
-
