--- a/topic4/4_1.md
+++ b/topic4/4_1.md
@@ -4,14 +4,27 @@ layout: default
 ---
 
 **LINKS**
-- [**TOPIC 1:** The Linux Community and a Career in Open Source](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html)
-- [**TOPIC 2:** Finding Your Way on a Linux System](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)
-- [**TOPIC 3:** The Power of the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic3/3_1.html)
-- [**TOPIC 4:** The Linux Operating System](https://bullintheserver.github.io/linuxstudysessions/topic4/4_1.html)
-- [**TOPIC 5:** Security and File Permissions](https://bullintheserver.github.io/linuxstudysessions/topic5/5_1.html)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
 
-# Topic 4
-The Linux Operating System  
+## Topic 4
+The Linux Operating System
+### 4.1
+[Choosing an Operating System](https://bullintheserver.github.io/linuxstudysessions/topic4/4_1.html)  
+Weight: 1
+
+### 4.2 
+[Understanding Computer Hardware](https://bullintheserver.github.io/linuxstudysessions/topic4/4_2.html)  
+Weight: 2
+
+### 4.3
+[Where Data is Stored](https://bullintheserver.github.io/linuxstudysessions/topic4/4_3.html)  
+Weight: 3
+
+### 4.4
+[Your Computer on the Network](https://bullintheserver.github.io/linuxstudysessions/topic4/4_4.html)  
+Weight: 2
+
+---
 
 ## 4.1
 Choosing an Operating System
@@ -193,10 +206,3 @@ Darwin
 - Active Directory Domain Controller type applications will be accessed remotely and not at the server 
 
 --- 
-
-## 4.2
-Understanding Computer Hardware
-Weight: 2  
-
-### Choosing a Linux Distribution 
-#### Operating Systems
