--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -112,7 +112,7 @@ Weight: 4
     - Uses `Ctrl` to access tools
 
 #### Variables
-- Go to [Topic 2 | 2.1 | Lesson 2](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#lesson-2)  
+- Go to [Topic 2 - 2.1 - Lesson 2](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)  
     - Refresher on:
         - Variables
         - Manipulating variables
@@ -132,6 +132,7 @@ Weight: 4
         - Strong, will convert meaningful symbols to plaintext 
 
 ##### Special Variables in Bash
+
 | Variable | Description | Usage |
 |----------|-------------|-------|
 | $0 | The name of the script | `echo "This script is called $0"` |
@@ -183,6 +184,7 @@ number of arguments: 3
 #### Conditional Logic in Bash
 
 ##### Common flags
+
 | Flag | Description |
 |------|-------------|
 | `-eq`| Equal to |
@@ -266,6 +268,7 @@ number of arguments: 1
 ### Lesson 2
 
 #### Exit Codes
+
 | Exit Code | Name | Meaning |
 |-----------|------|---------|
 | 0 | Success | The command or script executed successfully |
