--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -1,5 +1,5 @@
 ---
-title: "Topic 1.1"
+title: "1.1"
 layout: default
 ---
 
@@ -142,5 +142,5 @@ Weight: 2
 - Google Cloud
     - FreeBSD
     - Windows Servers
-    
+
 ---
