--- a/topic1/1_2.md
+++ b/topic1/1_2.md
@@ -40,7 +40,7 @@ Install and removal of packages via terminal:
 
 #### Package manager
 - Package repo with vast collection of apps available to install
-- Debian, Ubuntu, Mint install | uninstall commands
+- Debian, Ubuntu, Mint install and uninstall commands
     - `dpkg` (DEB Packages)
     - `apt-get`
     - `apt`
@@ -52,7 +52,7 @@ Install and removal of packages via terminal:
     - `sudo apt-get install package_name`  
     - `sudo apt install package_name`  
 
-- Red Hat, Fedora, CentOS install | uninstall commands
+- Red Hat, Fedora, CentOS install and uninstall commands
     - `rpm` (RPM packages)
     - `yum`
     - `dnf`
@@ -288,5 +288,11 @@ Install and removal of packages via terminal:
             - MySQL or Maria DB database
             - PHP programming
         - All of the programming languages described can also be used to implement these applications
+
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
         
 ---
