--- a/topic2/2_2.md
+++ b/topic2/2_2.md
@@ -120,4 +120,10 @@ $ find ~ -name thesis.pdf
 /home/carol/Downloads/thesis.pdf
 ```
 
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
 ---
