--- a/topic2/2_4.md
+++ b/topic2/2_4.md
@@ -119,4 +119,10 @@ Weight: 2
 | [:xdigit:] | Hexadecimal numerals (usually 0123456789abcdefABCDEF) |
 
 
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
 ---
