--- a/topic2/2_1.md
+++ b/topic2/2_1.md
@@ -218,4 +218,10 @@ $ echo $nr_files
 100 /etc/passwd
 ```
 
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
 ---
