--- a/topic3/3_1.md
+++ b/topic3/3_1.md
@@ -119,4 +119,10 @@ Weight: 2
         - `-9` slowest (most compressed)
         - `-6` default level 
 
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
 ---
