--- a/topic3/3_2.md
+++ b/topic3/3_2.md
@@ -203,4 +203,10 @@ cab ride
     - Filters and transforms text
     - Can find and replace characters and sets of characters
 
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
 ---
