--- a/topic5/5_1.md
+++ b/topic5/5_1.md
@@ -33,3 +33,11 @@ Weight: 0
 
 
 ### Lorem ipsum 
+
+
+<!-- HTML for Back to Top Button -->
+<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+
+<!-- Link to external JS file -->
+<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
+        
