--- a/topic1/1_2.md
+++ b/topic1/1_2.md
@@ -290,7 +290,7 @@ Install and removal of packages via terminal:
         - All of the programming languages described can also be used to implement these applications
 
 <!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
 
 <!-- Link to external JS file -->
 <script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
