--- a/topic2/2_3.md
+++ b/topic2/2_3.md
@@ -156,7 +156,7 @@ $ ls -l
     - "Unfolds" or runs the "ls" command in each subdirectory 
 
 <!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
 
 <!-- Link to external JS file -->
 <script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
