--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -34,7 +34,7 @@ Weight: 2
 #### Operating Systems
 
 <!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
 
 <!-- Link to external JS file -->
 <script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
