--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -30,8 +30,41 @@ Weight: 2
 Understanding Computer Hardware
 Weight: 2  
 
-### Choosing a Linux Distribution 
-#### Operating Systems
+### Power Supplies
+Computer system hardware requires:
+    - Specific voltages
+    - Tight tolerances
+    - Desktops
+        - Usually use wall outlets
+    - Servers
+        - Usually connect to multiple sources
+    - Cooling components
+        - To counteract generated heat
+
+Power supplies:
+    - Normalize available sources of power
+
+Standardized voltage:
+    - allow for world wide functionality of hardware components
+
+### Motherboard
+Normalized interconnections
+    - Uses standardized connectors and form factors
+    - Provides support for electrical needs of connectors
+
+Configurations
+    - Many different form factors
+    - Some allow for customization 
+    - Supports different processors and memory systems
+
+Programming
+    - Stored in nonvolatile memory
+        - Known as firmware
+    - Original firmware was BIOS
+        - *Basic Input/Output System*
+
+
+
 
 <!-- HTML for Back to Top Button -->
 <a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
