--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -4,8 +4,8 @@ layout: default
 ---
 
 **LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
-
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
+[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 # Topic 1
 The Linux Community and a Career in Open Source  
 
