--- a/topic2/2_1.md
+++ b/topic2/2_1.md
@@ -4,7 +4,8 @@ layout: default
 ---
 
 **LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
+[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 
 ## Topic 2  
 Finding Your Way on a Linux System
