--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -4,7 +4,8 @@ layout: default
 ---
 
 **LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
+[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 
 ## Topic 3  
 The Power of the Command Line
