--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -4,7 +4,8 @@ layout: default
 ---
 
 **LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)
+- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
+[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 
 ## Topic 4
 The Linux Operating System
