--- a/topic3/3_1.md
+++ b/topic3/3_1.md
@@ -5,7 +5,7 @@ layout: default
 
 **LINKS**
 - [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
+- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 
 ## Topic 3  
 The Power of the Command Line
