--- a/topic4/4_3.md
+++ b/topic4/4_3.md
@@ -5,7 +5,7 @@ layout: default
 
 **LINKS**
 - [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-[Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
+- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
 
 ## Topic 4
 The Linux Operating System
