--- a/topic1/1_4.md
+++ b/topic1/1_4.md
@@ -3,28 +3,7 @@ title: "1.4"
 layout: default
 ---
 
-**LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
-
-## Topic 1
-The Linux Community and a Career in Open Source  
-
-### 1.1
-[Linux Evolution and Popular Operating Systems](https://bullintheserver.github.io/linuxstudysessions/topic1/1_1.html)  
-Weight: 2
-
-### 1.2
-[Major Open Source Applications](https://bullintheserver.github.io/linuxstudysessions/topic1/1_2.html)  
-Weight: 2  
-
-### 1.3
-[Open Source Software and Licensing](https://bullintheserver.github.io/linuxstudysessions/topic1/1_3.html)  
-Weight: 1  
-
-### 1.4
-[ICT Skills and Working in Linux](https://bullintheserver.github.io/linuxstudysessions/topic1/1_4.html)  
-Weight: 2  
+{% include 1nav.md %}
 
 ---
 
