--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -3,30 +3,13 @@ title: "3.3"
 layout: default
 ---
 
-**LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
-
-## Topic 3  
-The Power of the Command Line
-
-### 3.1  
-[Archiving Files on the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic3/3_1.html)  
-Weight: 2
-
-### 3.2  
-[Searching and Extracting Data from Files](https://bullintheserver.github.io/linuxstudysessions/topic3/3_2.html)  
-Weight: 3
-
-### 3.3  
-[Turning Commands into a Script](https://bullintheserver.github.io/linuxstudysessions/topic3/3_3.html)  
-Weight: 4
+{% include 3nav.md %}
 
 ---
 
 ## 3.3
 Turning Commands into a Script  
-Weight: 4 
+Weight: 4  
 
 ### Lesson 1
 
