--- a/topic2/2_3.md
+++ b/topic2/2_3.md
@@ -3,28 +3,7 @@ title: "2.3"
 layout: default
 ---
 
-**LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
-
-## Topic 2  
-Finding Your Way on a Linux System
-
-### 2.1
-[Command Line Basics](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)  
-Weight: 2
-
-### 2.2
-[Getting Help on the Command Line](https://bullintheserver.github.io/linuxstudysessions/topic2/2_2.html)  
-Weight: 2
-
-### 2.3
-[Using Directories and Listing Files](https://bullintheserver.github.io/linuxstudysessions/topic2/2_3.html)  
-Weight: 2
-
-### 2.4
-[Creating, Moving, and Deleting Files](https://bullintheserver.github.io/linuxstudysessions/topic2/2_4.html)  
-Weight: 2
+{% include 2nav.md %}
 
 --- 
 
