--- a/topic5/5_3.md
+++ b/topic5/5_3.md
@@ -3,28 +3,7 @@ title: "5.3"
 layout: default
 ---
 
-**LINKS**
-- [**HOME:** linuxstudysessions](https://bullintheserver.github.io/linuxstudysessions)  
-- [Back to GitHub](https://github.com/bullintheserver/linuxstudysessions)  
-
-## Topic 5
-Security and File Permissions
-
-### 5.1
-[Basic Security and Identifying User Types](https://bullintheserver.github.io/linuxstudysessions/topic5/5_1.html)  
-Weight: 2
-
-### 5.2
-[Creating Users and Groups](https://bullintheserver.github.io/linuxstudysessions/topic5/5_2.html)  
-Weight: 2
-
-### 5.3 
-[Managing File Permissions and Ownership](https://bullintheserver.github.io/linuxstudysessions/topic5/5_3.html)  
-Weight: 2
-
-### 5.4 
-[Special Directories and Files](https://bullintheserver.github.io/linuxstudysessions/topic5/5_4.html)  
-Weight: 1
+{% include 5nav.md %}
 
 ---
 
