--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -43,7 +43,11 @@ Programming
         - Known as firmware
     - Original firmware was BIOS
         - *Basic Input/Output System*
-
+    - Next generation was EFI
+        - EFI standardized 
+        - Became UEFI
+            - *Unified Extensible Firmware Interface*
+        
 
 
 
