--- a/topic5/5_4.md
+++ b/topic5/5_4.md
@@ -14,9 +14,4 @@ Weight: 0
 
 ### Lorem ipsum 
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
+{% include bttnav.html %}
