--- a/topic2/2_2.md
+++ b/topic2/2_2.md
@@ -100,10 +100,6 @@ $ find ~ -name thesis.pdf
 /home/carol/Downloads/thesis.pdf
 ```
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
 ---
+
+{% include bttnav.html %}
