--- a/topic3/3_2.md
+++ b/topic3/3_2.md
@@ -192,5 +192,7 @@ cab ride
 
 <!-- Link to external JS file -->
 <script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
+
 ---
+
+{% include bttnav.html %}
