--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -123,10 +123,6 @@ Weight: 2
     - FreeBSD
     - Windows Servers
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-
 ---
+
+{% include bttnav.html %}
