--- a/topic1/1_3.md
+++ b/topic1/1_3.md
@@ -261,10 +261,6 @@ Weight: 2
         - Allows creation of encrypted media and files
         - Cross-platform: Linux, MacOS, Windows
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
 ---
+
+{% include bttnav.html %}
