--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -446,10 +446,6 @@ done
 exit 0
 ```
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
 ---
+
+{% include bttnav.html %}
