--- a/topic4/4_1.md
+++ b/topic4/4_1.md
@@ -185,11 +185,7 @@ Darwin
     - Allows choice between GUI and CLI-only versions
 - Most of the time the GUI of older serers will be loaded but not used
 - Active Directory Domain Controller type applications will be accessed remotely and not at the server 
-
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
         
 --- 
+
+{% include bttnav.html %}
