--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -7,9 +7,4 @@ layout: default
 
 ---
 
-<!-- HTML for Back to Top Button -->
-<a href="#" id="back-to-top" title="Back to top">&uarr; back to top &uarr;</a>
-
-<!-- Link to external JS file -->
-<script src="{{ "/assets/js/back-to-top.js" | relative_url }}"></script>
-        
+{% include bttnav.html %}
